--- a/tools-abf-service/src/main/resources/application.yml
+++ b/tools-abf-service/src/main/resources/application.yml
@@ -53,9 +53,9 @@ spring:
   profiles: dev
   datasource:
     datasource-name: default
-    url: jdbc:mysql://127.0.0.1:3306/tistools?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/database1?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
-    password: root
+    password: zhoushihao
     filters: log4j,wall,mergeStat
 
 
@@ -67,7 +67,7 @@ tools:
     datasource-name: otherDataSource
     url: jdbc:mysql://127.0.0.1:3306/test?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
-    password: root
+    password: zhoushihao
 
 # ::::::::::::
 logging:
@@ -102,7 +102,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/tools?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
-    password: root123
+    password: zhoushihao
     filters: log4j,wall,mergeStat
 
 tools:
