--- a/tools-abf-service/pom.xml
+++ b/tools-abf-service/pom.xml
@@ -86,10 +86,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
             <scope>provided</scope>
         </dependency>
         <!-- lombok end -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
 
     </dependencies>
 
