--- a/tools-abf-service/src/main/resources/application.yml
+++ b/tools-abf-service/src/main/resources/application.yml
@@ -50,6 +50,9 @@ mybatis-plus:
 
 # ::::::::::::
 spring:
+  http:
+    encoding:
+      charset: UTF-8
   profiles: dev
   datasource:
     datasource-name: default
@@ -57,6 +60,8 @@ spring:
     username: tools
     password: tools123
     filters: log4j,wall,mergeStat
+  messages:
+    encoding: utf-8
 
 
 # :::::::::::
