--- a/tools-auth-server/pom.xml
+++ b/tools-auth-server/pom.xml
@@ -87,6 +87,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
