:wrench:添加数据源配置和cors配置

--- a/tools-senior-service/src/main/resources/application.yml
+++ b/tools-senior-service/src/main/resources/application.yml
@@ -2,8 +2,6 @@
 #            base
 ######################################
 
-
-
 server:
   port: 28080
 
@@ -26,6 +24,12 @@ spring:
   application:
     name: sensior-develpoer-design
 
+# :::::: tools ::::::
+
+tools:
+  multi-datasource-open: false
+  cors:
+    open: true
 
 # :::::: mybatis-plus ::::::
 
